Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberUndefined.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        return undefined
    end
end